Working Design projects

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,6 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Me - Guro Handeland</title>
         <link rel="stylesheet" href="../css/styles.css"></link>
-        <script src="../js/header.js"></script>
     </head>
     <body>
         <header class="my_header">
@@ -25,7 +24,7 @@
             <div class="about_container" id="about_row">
 
                 <div class="about_column_1">
-                    <img class="pb" src="images/gurohandeland_sun.png"/>
+                    <img class="pb" src="../images/gurohandeland_sun.png"/>
                 </div>
 
                 <div class="about_column_2">
