--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Me - Guro Handeland</title>
     <link rel="stylesheet" href="../css/styles.css"> </link>
-    <script src="../js/header.js"></script>
 </head>
 
 <body>
@@ -69,11 +68,15 @@
         <div class="img_slideshow_container" id="draw_slideshow2">
                 <div class="i&e_slides">
                     <p class="numbertext">1/3</p>
-                    <img onclick="plusSlides(-1, 1)" class="slide_img" src="../images/i&e/pencil.jpeg" />
+                    <img onclick="plusSlides(1, 1)" class="slide_img" src="../images/i&e/pencil.jpeg" />
                 </div>
                 <div class="i&e_slides">
                     <div class="numbertext">2/3</div>
-                    <img onclick="plusSlides(-1, 1)" class="slide_img" src="../images/i&e/digital.jpeg" />
+                    <img onclick="plusSlides(1, 1)" class="slide_img" src="../images/i&e/digital.jpeg" />
+                </div>
+                <div class="i&e_slides">
+                    <div class="numbertext">3/3</div>
+                    <img onclick="plusSlides(1, 1)" class="slide_img" src="../images/i&e/wall.jpg" />
                 </div>
          </div>
     <hr class="little_whitespace" id="ws_photo">
