--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Guro Handeland - Home</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <script src="js/navigation.js"></script>
+    <script src="../js/navigation.js"></script>
 </head>
 <body>
     <header class="my_header">
@@ -25,9 +25,9 @@
                 <li class="home_nav_item"><button id="home" onClick="openPage('home');">Home</button></li>
                 <li class="home_nav_item"><button id="about" onClick="openPage('about');">About</button></li>
                 <li class="home_nav_item"><button id="drawings" onClick="openPage('drawings');">Drawings</button></li>
-                <li class="home_nav_item"><button id="photo" onClick="openPage(photo);">Photo</button></li>
-                <li class="home_nav_item"><button id="porjects" onClick="openPage(projects);">Projects</button></li>
-                <li class="home_nav_item"><button id="where" onClick="openPage(where);">Whereabouts</button></li>
+                <li class="home_nav_item"><button id="photo" onClick="openPage('photo');">Photo</button></li>
+                <li class="home_nav_item"><button id="projects" onClick="openPage('projects');">Projects</button></li>
+                <li class="home_nav_item"><button id="where" onClick="openPage('where');">Whereabouts</button></li>
             </nav>
         </div>
     </div>
