new font color p

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,7 +27,8 @@
         <div>
         <button type="button" class="collapsible"><p>Fimafeng: from API to user oriented AndroidApp</p></button>
             <div class="content">
-                <h3><small>For boats and their owners<br>02.2020-06.2020</small></h3>
+                <h3><small>For boats and their owners
+                    <br>02.2020-06.2020</small></h3>
                 <p><small>Keywords: ScrumBan, remote data collection, digital teamwork.
                         <br>Technical Keywords: Android Studio, Kotlin, XML, API, Zoom, Figma, Miro, Google Forms.</small>
                 </p>
@@ -79,7 +80,8 @@
             </div>
          <button type="button" class="collapsible"><p>ReMake: Transition Design for Makerspace</p></button>
             <div class="content">
-                <h3><small>Towards a more sustainable Makerspace <br></br>02.2021-06.2021</small></h3>
+                <h3><small>Towards a more sustainable Makerspace
+                    <br>02.2021-06.2021</small></h3>
                 <p><small>Key words: Transition design, Makerspace, sustainability, upcycling, concept development, participatory design.
                 <br>Technical key words: Zoom, Figma, Miro.
                 <br>Links: <a href="https://www.uio.no/studier/emner/matnat/ifi/IN3010/v21/prosjekter/diy/index.html" target="_blank">Project third year –
@@ -131,7 +133,8 @@
 
             <button type="button" class="collapsible"><p>Midlun: User Centered Arduino Design</p></button>
             <div class="content">
-                <h3><small>Tactile interaction at The Vikingship Museum <br></br> 02.2019-06.2019</small></h3>
+                <h3><small>Tactile interaction at The Vikingship Museum
+                    <br>02.2019-06.2019</small></h3>
                 <p><small>Key words: User centered design, museum, kill-your-darlings, tactile design.  
                     <br>Technical key words: Arduino, Processing, sensor-programmering.
                     <br>Link: <a href="https://www.uio.no/studier/emner/matnat/ifi/IN1060/v19/prosjekt-2019/hvass/">Project first year – University of Oslo: HVASS</a></small></p>
