New layout slideshow

--- a/pages/photo.html
+++ b/pages/photo.html
@@ -31,7 +31,7 @@
         <h3>Olympus</h3>
         <h4>A few years back I bought an Olympus XA2 camera at a second hand store. <br>These are some of my favourites.</h4>
         <small><i>2022-2023</i></small>
-        <div class="img_slideshow_container">
+        <div class="img_slideshow_container" id="olympus">
             <div id="slideshow1">
                 <div class="olympus_slides">
                     <div class="numbertext">1/3</div>
