--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -28,36 +28,36 @@
             <p>I ran a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
             <p>I have also found drawing useful in my work as a cafemanager.</p>
         </div>
-        <hr class="little_whitespace" id="ws_photo">
+    <hr class="little_whitespace" id="ws_photo">
         </hr>
         <h3>Digital Mousepad Food Signs</h3>
         <h4>Catch essence in simplicity. The goal was to draw attention to the drinks and coffees we sold at <a
                 href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>.</h4>
         <small><i>08.2022</i></small>
-        <div class="img_slideshow_container" id="draw_slideshow1">
+        <div class="img_slideshow_container" id="draw_slideshow">
                 <div class="fs_slides">
                     <p class="numbertext">1/6</p>
-                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn1.jpeg"/>
+                    <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn1.jpeg"/>
                 </div>
                 <div class="fs_slides">
                     <p class="numbertext">2/6</p>
-                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn2.jpeg" />
+                    <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn2.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <div class="numbertext">3/6</div>
-                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn3.jpeg" />
+                    <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn3.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <p class="numbertext">4/6</p>
-                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn4.jpeg" />
+                    <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn4.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <p class="numbertext">5/6</p>
-                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn5.jpeg" />
+                    <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn5.jpeg" />
                 </div>
                 <div class="fs_slides">
                     <p class="numbertext">6/6</p>
-                    <img onClick="plusSlides(-1,0)" class="slide_img" src="../images/foodsigns/fsdrawn6.jpeg" />
+                    <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn6.jpeg" />
                 </div>
         </div>
     <hr class="little_whitespace" id="ws_photo">
@@ -65,7 +65,7 @@
     <h3>Hoping Right Hands</h3>
     <h4>I made these hands for my sister and now brother in law as a gift for their wedding day. It is now an A1 print on their living room wall.</h4> 
     <small><i>14.05.2022</i></small>
-        <div class="img_slideshow_container" id="draw_slideshow2">
+        <div class="img_slideshow_container" id="draw_slideshow">
                 <div class="i&e_slides">
                     <p class="numbertext">1/3</p>
                     <img onclick="plusSlides(1, 1)" class="slide_img" src="../images/i&e/pencil.jpeg" />
