index on right place

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header class="my_header">
-        <h1 class="nav_item"><a href="about.html">Guro Handeland</a></h1>
+        <h1 class="nav_item"><a href="/pages/about.html">Guro Handeland</a></h1>
     </header>
     <div class="grid">
         <div class="main_content">
-                <h2>This is the website of <a href="about.html">Guro Handeland</a>
+                <h2>This is the website of <a href="/pages/about.html">Guro Handeland</a>
                 <br>Her stuff. What she has done in different forms and ways.
                 <br>In absolute self written (but google inspired) html css js synergy.
                 <br>I wanted this page to be as static as possible. No extra fun stuff.
@@ -22,7 +22,7 @@
         </div>
         <div class="home_nav">
             <nav class="home_nav_list">
-                <li class="home_nav_item"><button id="home" onClick="openPage('home');">Home</button></li>
+                <li class="home_nav_item"><button id="i">Home</button></li>
                 <li class="home_nav_item"><button id="about" onClick="openPage('about');">About</button></li>
                 <li class="home_nav_item"><button id="drawings" onClick="openPage('drawings');">Drawings</button></li>
                 <li class="home_nav_item"><button id="photo" onClick="openPage('photo');">Photo</button></li>
