New layout about

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="home_nav">
             <nav class="home_nav_list">
-                <li class="home_nav_item"><button id="i">Home</button></li>
+                <li class="home_nav_item"><button id="home">Home</button></li>
                 <li class="home_nav_item"><button id="about" onClick="openPage('about');">About</button></li>
                 <li class="home_nav_item"><button id="drawings" onClick="openPage('drawings');">Drawings</button></li>
                 <li class="home_nav_item"><button id="photo" onClick="openPage('photo');">Photo</button></li>
