--- a/pages/about.html
+++ b/pages/about.html
@@ -23,22 +23,28 @@
         <div class="grid">
             <div class="about_container" id="about_row">
 
-                <div class="about_column_1">
+                <div class="about_photos">
                     <img class="pb" src="../images/gurohandeland_sun.png"/>
+                </div>
+                <div class="about_photos">
+                    <img class="pb" src="../images/v60_inTVF.jpg" />
                 </div>
 
                 <div class="about_column_2">
                     <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know how to code and how to
                     find solutions. Have a deep passion for coffee, collages and hikes. And drawing.</p>
-                    <p class="about_text">I have a bachelor degree from University of Oslo. <a href="https://www.uio.no/studier/program/inf-design/" target="_blank">This one</a>. Here, I studied interaction design and did my equivalient to a minor in social anthropology. In social anthropology, I took classes that emphasised our global troubles (Overheating & the linear idea of development). My field of interest is Sustainable Design, and I find the Transition Design Methodology very intriguing. 
-                    <br>I did <a href="Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> during my bachelor, on a Community of Practice on a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>). In January 2023 I travelled to Malawi with the same group of researchers. We presented our work at the <a href="https://www.devstud.org.uk/conference/conference-2023/" target="_blank">DSA2023 Conference</a> in Reading, England.</p>
-                    <p class="about_text">Since August 2021 I have been living my life as a cafemanager <i style="font-style: italic; font-size: inherit;"> – included doing some graphical design, drawing classes, one musical performance, event management and hiring – </i> at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. This is also where you find me Spring 2023.</p>
-                    <br><br>
-                    <p class="about_text">I am currently living in my converted VW Transporter (T5). Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a></p>
+                    <p class="about_text">I have a bachelor degree from University of Oslo. (<a href="https://www.uio.no/studier/program/inf-design/" target="_blank">Informatics: Design, use and interaction</a>). I know do my Msc in interaction design, and I did my equivalient to a minor in social anthropology. <br></br> In social anthropology, I took classes that emphasised our global troubles (the global warming & the linear idea of development). I truly believe that the anthropology perspective helps me understand culture and contexts, making me a good interaction desiger.<br>
+                    </br> My field of interest is Sustainable Design and Information Systems research. I find the Transition Design Methodology very intriguing, as it uses systems theory very actively.<br>
+                    </br>I was part of the Research track in 2020-2021. Here we did a research study <a href="../docs/Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> on whether a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>) was a Community of Practice. In January 2023 I travelled to Malawi with the same group of researchers. We looked at whether the use of scannable codes in a EPR system was beneficial. We presented our work at the <a href="https://www.devstud.org.uk/conference/conference-2023/" target="_blank">DSA2023 Conference</a> in Reading, England, in June 2023.</p>
+                    <p class="about_text">From August 2021 to June 2023 I lived my life as a cafemanager at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. <i style="font-style: italic; font-size: inherit;"> This included doing some graphical design, drawing classes, one musical performance, event management and hiring.</i></p>
                 </div>
+                <hr class="little_whitespace" id="ws_photo">
+                </hr>
+                <p class="about_text">I am currently living in my converted VW Transporter (T5). This brings me closer to nature, and is a definite way towards being solution oriented.<br>
+                </br>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a>.</p>
             </div>
         </div>
-        <canvas class="whitespace"></canvas>
+
         <footer>
             <div class="some">
                 <menu class="somemenu">
