--- a/pages/photo.html
+++ b/pages/photo.html
@@ -11,7 +11,7 @@
     <header class="my_header">
         <div class="nav">
             <nav class="nav_list">
-                <li class="nav_item"><a class="active" href="/pages/index.html">Home</a></li>
+                <li class="nav_item"><a href="/pages/index.html">Home</a></li>
                 <li class="nav_item"><a href="/pages/about.html">About</a></li>
                 <li class="nav_item"><a href="/pages/drawings.html">Drawings</a></li>
                 <li class="nav_item"><a href="/pages/photo.html">Photo</a></li>
