--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -12,7 +12,7 @@
     <header class="my_header">
         <div class="nav">
             <nav class="nav_list">
-                <li class="nav_item"><a class="active" href="../index.html">Home</a></li>
+                <li class="nav_item"><a href="../index.html">Home</a></li>
                 <li class="nav_item"><a href="about.html">About</a></li>
                 <li class="nav_item"><a href="drawings.html">Drawings</a></li>
                 <li class="nav_item"><a href="photo.html">Photo</a></li>
