--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -24,9 +24,11 @@
     <div class="grid">
         <div>
             <h2>Drawings</h2>
-            <p>I draw when I feel overwhelmed by life. Usually I write a text on the side, as it helps me sort out thoughts and worries.</p>
-            <p>I ran a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.</p>
-            <p>I have also found drawing useful in my work as a cafemanager.</p>
+            <p class="about_text">I draw when I feel overwhelmed by life. Usually I write a text on the side, as it helps me sort out thoughts and worries.
+            <br></br>I ran a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.
+            <br></br>I have also found drawing useful in my work as a cafemanager. </br>If you want to see my more recent artwork I invite you to follow <a
+                href="https://www.instagram.com/gurogreier/">@gurogreier on Instagram</a>.</p>
+
         </div>
     <hr class="little_whitespace" id="ws_photo">
         </hr>
