--- a/pages/photo.html
+++ b/pages/photo.html
@@ -25,7 +25,7 @@
         <h2>
             Photo
         </h2>
-            <p>I take photos for inspiration. And for the memories.</p>
+            <p class="about_text">I take photos for inspiration. And for the memories.</p>
         <hr class="little_whitespace" id="ws_photo"></hr>
 
         <h3>Olympus</h3>
