--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,6 +23,8 @@
         </div>
     </header>
     <div class="grid">
+        <p class="about_text">Here you have an overview of what I have done as a designer. It is a display of my diversity and projects using different design methodologies. I have found the agile process very helpful in projects, and I am a fan of iteration. I have used there IT principles also in my more pure graphical works. <br>
+        </br>If you want to see my more recent art & design works you should follow <a href="https://www.instagram.com/gurogreier/">@gurogreier on Instagram</a>.</p>
         <h2>Design Projects</h2>
         <div>
         <button type="button" class="collapsible"><p>Fimafeng: from API to user oriented AndroidApp</p></button>
