--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
         <header class="my_header">
             <div class="nav">
                 <nav class="nav_list">
-                    <li class="nav_item"><a class="active" href="index.html">Home</a></li>
+                <li class="nav_item"><a href="../index.html">Home</a></li>
                     <li class="nav_item"><a href="about.html">About</a></li>
                     <li class="nav_item"><a href="drawings.html">Drawings</a></li>
                     <li class="nav_item"><a href="photo.html">Photo</a></li>
@@ -31,8 +31,8 @@
                 </div>
 
                 <div class="about_column_2">
-                    <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know how to code and how to
-                    find solutions. Have a deep passion for coffee, collages and hikes. And drawing.</p>
+                    <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know the basics of codings and how to
+                    find needs and solutions. Have a deep passion for coffee, collages, music, drawing, ski touring and running.</p>
                     <p class="about_text">I have a bachelor degree from University of Oslo. (<a href="https://www.uio.no/studier/program/inf-design/" target="_blank">Informatics: Design, use and interaction</a>). I know do my Msc in interaction design, and I did my equivalient to a minor in social anthropology. <br></br> In social anthropology, I took classes that emphasised our global troubles (the global warming & the linear idea of development). I truly believe that the anthropology perspective helps me understand culture and contexts, making me a good interaction desiger.<br>
                     </br> My field of interest is Sustainable Design and Information Systems research. I find the Transition Design Methodology very intriguing, as it uses systems theory very actively.<br>
                     </br>I was part of the Research track in 2020-2021. Here we did a research study <a href="../docs/Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> on whether a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>) was a Community of Practice. In January 2023 I travelled to Malawi with the same group of researchers. We looked at whether the use of scannable codes in a EPR system was beneficial. We presented our work at the <a href="https://www.devstud.org.uk/conference/conference-2023/" target="_blank">DSA2023 Conference</a> in Reading, England, in June 2023.</p>
@@ -55,7 +55,6 @@
                     <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
                 </menu>
             </div>
-            <small id="copyright">copyright © Guro Handeland</small>
         </footer>
     </body>
 </html>
