--- a/pages/photo.html
+++ b/pages/photo.html
@@ -11,7 +11,7 @@
     <header class="my_header">
         <div class="nav">
             <nav class="nav_list">
-                <li class="nav_item"><a href="/pages/index.html">Home</a></li>
+                <li class="nav_item"><a href="../index.html">Home</a></li>
                 <li class="nav_item"><a href="/pages/about.html">About</a></li>
                 <li class="nav_item"><a href="/pages/drawings.html">Drawings</a></li>
                 <li class="nav_item"><a href="/pages/photo.html">Photo</a></li>
@@ -80,7 +80,6 @@
                     target="_blank">LinkedIn</a></li>
             <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
         </menu>
-        <small id="copyright">copyright © Guro Handeland</small>
     </footer>
 <script>
     var slideIndex = [1, 1]; //blir automatisk storre pga for-loop i initialiseSlides
