--- a/pages/where.html
+++ b/pages/where.html
@@ -15,7 +15,7 @@
    <header class="my_header">
         <div class="nav">
             <nav class="nav_list">
-                <li class="nav_item"><a href="index.html">Home</a></li>
+                <li class="nav_item"><a href="../index.html">Home</a></li>
                 <li class="nav_item"><a href="about.html">About</a></li>
                 <li class="nav_item"><a href="drawings.html">Drawings</a></li>
                 <li class="nav_item"><a href="photo.html">Photo</a></li>
@@ -41,7 +41,6 @@
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
             </menu>
         </div>
-        <small id="copyright">copyright © Guro Handeland</small>
     </footer>
 </body>
 
