--- a/pages/drawings.html
+++ b/pages/drawings.html
@@ -26,7 +26,7 @@
             <h2>Drawings</h2>
             <p class="about_text">I draw when I feel overwhelmed by life. Usually I write a text on the side, as it helps me sort out thoughts and worries.
             <br></br>I ran a drawing class in Henningsvær, Lofoten. Here, I have noticed that drawing has a meditative effect on people. I believe everyone can draw, it is just a matter of perspective and patience.
-            <br></br>I have also found drawing useful in my work as a cafemanager. </br>If you want to see my more recent artwork I invite you to follow <a
+            <br></br>If you want to see my more recent artwork I invite you to follow <a
                 href="https://www.instagram.com/gurogreier/">@gurogreier on Instagram</a>.</p>
 
         </div>
@@ -37,6 +37,7 @@
                 href="https://www.trevarefabrikken.no/">Trevarefabrikken</a>.</h4>
         <small><i>08.2022</i></small>
         <div class="img_slideshow_container" id="draw_slideshow">
+            <div>
                 <div class="fs_slides">
                     <p class="numbertext">1/6</p>
                     <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn1.jpeg"/>
@@ -62,12 +63,14 @@
                     <img onClick="plusSlides(1,0)" class="slide_img" src="../images/portofolio/foodsigns/fsdrawn6.jpeg" />
                 </div>
         </div>
+        </div>
     <hr class="little_whitespace" id="ws_photo">
     </hr>
     <h3>Hoping Right Hands</h3>
     <h4>I made these hands for my sister and now brother in law as a gift for their wedding day. It is now an A1 print on their living room wall.</h4> 
     <small><i>14.05.2022</i></small>
         <div class="img_slideshow_container" id="draw_slideshow">
+            <div>
                 <div class="i&e_slides">
                     <p class="numbertext">1/3</p>
                     <img onclick="plusSlides(1, 1)" class="slide_img" src="../images/i&e/pencil.jpeg" />
@@ -80,6 +83,7 @@
                     <div class="numbertext">3/3</div>
                     <img onclick="plusSlides(1, 1)" class="slide_img" src="../images/i&e/wall.jpg" />
                 </div>
+            </div>
          </div>
     <hr class="little_whitespace" id="ws_photo">
     </hr>
@@ -96,7 +100,6 @@
                 <li><a href="https://www.facebook.com/guro.handeland/" class="somelink" target="_blank">Facebook</a></li>
             </menu>
         </div>
-        <small id="copyright">copyright © Guro Handeland</small>
     </footer>
 
     <script>
