New text design

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <div class="grid">
         <div class="main_content">
                 <h2>This is the website of <a href="/pages/about.html">Guro Handeland</a>
-                <br>Her stuff. What she has done in different forms and ways.
-                <br>In absolute self written (but google inspired) html css js synergy.
-                <br>I wanted this page to be as static as possible. No extra fun stuff.
-                <br>Have patience. I do. More will come and arrive.</h2>
+                <br>Made as sustainable as she knows.</h2>
         </div>
         <div class="home_nav">
             <nav class="home_nav_list">
@@ -33,7 +30,7 @@
     </div>
     <footer>
         <div class="some">
-            <menu class="somemenu">
+            <menu>
                 <text class="about_text">Find me on</text>
                 <li><a href="https://www.instagram.com/gurogreier/" class="somelink" target="_blank">Instagram</a></li>
                 <li><a href="https://www.linkedin.com/in/guro-handeland-740171156/" class="somelink" target="_blank">LinkedIn</a></li>
