--- a/pages/about.html
+++ b/pages/about.html
@@ -26,21 +26,22 @@
                 <div class="about_photos">
                     <img class="pb" src="../images/gurohandeland_sun.png"/>
                 </div>
-                <div class="about_photos">
-                    <img class="pb" src="../images/v60_inTVF.jpg" />
-                </div>
-
+                
                 <div class="about_column_2">
-                    <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. Know the basics of codings and how to
-                    find needs and solutions. Have a deep passion for coffee, collages, music, drawing, ski touring and running.</p>
-                    <p class="about_text">I have a bachelor degree from University of Oslo. (<a href="https://www.uio.no/studier/program/inf-design/" target="_blank">Informatics: Design, use and interaction</a>). I know do my Msc in interaction design, and I did my equivalient to a minor in social anthropology. <br></br> In social anthropology, I took classes that emphasised our global troubles (the global warming & the linear idea of development). I truly believe that the anthropology perspective helps me understand culture and contexts, making me a good interaction desiger.<br>
-                    </br> My field of interest is Sustainable Design and Information Systems research. I find the Transition Design Methodology very intriguing, as it uses systems theory very actively.<br>
+                    <p class="about_text"> Guro, 26 y/o. Always on the look for the reflection of the sun. I know the basics of codings, and as a designer I know how to
+                        find needs and solutions. 
+                        <br></br>My passions are coffee, collages, music, drawing, ski touring and running.</p>
+                        <p class="about_text">I have a bachelor degree from University of Oslo: <a href="https://www.uio.no/studier/program/inf-design/" target="_blank">Informatics: Design, use and interaction</a>. Currently, I am doing my M.sc. in interaction design, and I did my equivalient to a minor in social anthropology. <br></br> In social anthropology, I took classes that emphasised our global troubles (the global warming & the idea of development). The anthropology perspective is very helpful in my role as an interaction designer.<br>
+                        </br> My field of interest is Sustainable Design and Information Systems research. I find the Transition Design Methodology very intriguing, as it uses systems theory very actively.<br>
                     </br>I was part of the Research track in 2020-2021. Here we did a research study <a href="../docs/Handeland&Skjeie(2021).pdf" target="_blank">a research study</a> on whether a online help desk for the users of our worlds biggest free and open source health information software (<a href="https://dhis2.org/" target="_blank">Dhis2</a>) was a Community of Practice. In January 2023 I travelled to Malawi with the same group of researchers. We looked at whether the use of scannable codes in a EPR system was beneficial. We presented our work at the <a href="https://www.devstud.org.uk/conference/conference-2023/" target="_blank">DSA2023 Conference</a> in Reading, England, in June 2023.</p>
                     <p class="about_text">From August 2021 to June 2023 I lived my life as a cafemanager at <a href="https://www.trevarefabrikken.no/" target="_blank">Trevarefabrikken in Henningsvær, Lofoten</a>. <i style="font-style: italic; font-size: inherit;"> This included doing some graphical design, drawing classes, one musical performance, event management and hiring.</i></p>
                 </div>
                 <hr class="little_whitespace" id="ws_photo">
-                </hr>
-                <p class="about_text">I am currently living in my converted VW Transporter (T5). This brings me closer to nature, and is a definite way towards being solution oriented.<br>
+            </hr>
+            <div class="about_photos">
+                <img class="pb" src="../images/v60_inTVF.jpg" />
+            </div>
+            <p class="about_text">I am currently living in my converted VW Transporter (T5). This brings me closer to nature, and is a definite way towards being solution oriented.<br>
                 </br>Contact me by calling +47 406 28 219. Or email me at <a href=mailto:"guro@handeland.info">guro@handeland.info</a>.</p>
             </div>
         </div>
